[gd_scene load_steps=75 format=3 uid="uid://dlt3ha7g0ra6u"]

[ext_resource type="Script" path="res://assets/entities/slime/slime.gd" id="1_ofamj"]
[ext_resource type="PackedScene" uid="uid://bhqj15dn3fxry" path="res://components/velocity/velocity_component.tscn" id="1_s4nx0"]
[ext_resource type="PackedScene" uid="uid://datk0irfypdeu" path="res://components/health/health_component.tscn" id="2_pclgn"]
[ext_resource type="PackedScene" uid="uid://88bculsfiyuv" path="res://components/stats/stats_component.tscn" id="3_tkd2y"]
[ext_resource type="PackedScene" uid="uid://d2fbg0yiqyq34" path="res://components/effect/effect_component.tscn" id="4_n6hkv"]
[ext_resource type="PackedScene" uid="uid://ckwedti3q6wd3" path="res://components/hitbox/hitbox_component.tscn" id="5_emebw"]
[ext_resource type="PackedScene" uid="uid://cyds65pm1tk3p" path="res://components/hurtbox/hurtbox_component.tscn" id="6_lxtfo"]
[ext_resource type="Script" path="res://assets/stats/damage_data.gd" id="7_x8lll"]
[ext_resource type="PackedScene" uid="uid://den13w6x5bc17" path="res://components/tracker/tracker_component.tscn" id="9_bx22s"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2v7n3"]
load_path = "res://.godot/imported/slime.png-86923d59624240e3e40122e1edd2395e.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_u7fsj"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(32, 64, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_upk1g"]
radius = 7.0

[sub_resource type="Animation" id="Animation_tp762"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:move_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_d2pn2"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qd0r"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1koc1"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6k5h"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ebpb"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14s3y"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(192, 64, 32, 32)

[sub_resource type="Animation" id="Animation_5clxf"]
resource_name = "attack_left"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_d2pn2"), SubResource("AtlasTexture_u7fsj"), SubResource("AtlasTexture_1qd0r"), SubResource("AtlasTexture_1koc1"), SubResource("AtlasTexture_y6k5h"), SubResource("AtlasTexture_6ebpb"), SubResource("AtlasTexture_14s3y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:move_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.0, 1.5, 2.0, 1.25, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_xrvk0"]
resource_name = "attack_right"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_d2pn2"), SubResource("AtlasTexture_u7fsj"), SubResource("AtlasTexture_1qd0r"), SubResource("AtlasTexture_1koc1"), SubResource("AtlasTexture_y6k5h"), SubResource("AtlasTexture_6ebpb"), SubResource("AtlasTexture_14s3y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:move_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.0, 1.5, 2.0, 1.25, 0.0, 0.0]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_p11r0"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu1vd"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tapdp"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3brnq"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5o2e"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(128, 128, 32, 32)

[sub_resource type="Animation" id="Animation_ngyrv"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_p11r0"), SubResource("AtlasTexture_pu1vd"), SubResource("AtlasTexture_tapdp"), SubResource("AtlasTexture_3brnq"), SubResource("AtlasTexture_s5o2e")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ggt6f"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h84gy"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpd7q"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(64, 96, 32, 32)

[sub_resource type="Animation" id="Animation_3erhi"]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_ggt6f"), SubResource("AtlasTexture_h84gy"), SubResource("AtlasTexture_qpd7q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gxd5q"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcmvf"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq2fl"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8xrm"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="Animation" id="Animation_am0rw"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_gxd5q"), SubResource("AtlasTexture_xcmvf"), SubResource("AtlasTexture_dq2fl"), SubResource("AtlasTexture_n8xrm")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0vpko"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa4w1"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18f82"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_daf6c"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvkub"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_euw47"]
atlas = SubResource("CompressedTexture2D_2v7n3")
region = Rect2(160, 32, 32, 32)

[sub_resource type="Animation" id="Animation_u8xym"]
resource_name = "move_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_0vpko"), SubResource("AtlasTexture_qa4w1"), SubResource("AtlasTexture_18f82"), SubResource("AtlasTexture_daf6c"), SubResource("AtlasTexture_qvkub"), SubResource("AtlasTexture_euw47")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:move_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.75, 1.0, 1.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_gddls"]
resource_name = "move_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_0vpko"), SubResource("AtlasTexture_qa4w1"), SubResource("AtlasTexture_18f82"), SubResource("AtlasTexture_daf6c"), SubResource("AtlasTexture_qvkub"), SubResource("AtlasTexture_euw47")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:move_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.75, 1.0, 1.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpsxg"]
_data = {
"RESET": SubResource("Animation_tp762"),
"attack_left": SubResource("Animation_5clxf"),
"attack_right": SubResource("Animation_xrvk0"),
"death": SubResource("Animation_ngyrv"),
"hurt": SubResource("Animation_3erhi"),
"idle": SubResource("Animation_am0rw"),
"move_left": SubResource("Animation_u8xym"),
"move_right": SubResource("Animation_gddls")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_itt1b"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ejldr"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_d44y6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_itt1b")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ejldr")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_as5o6"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vkbny"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ygn52"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fund5"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b6ft4"]
animation = &"move_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_v0b7u"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fund5")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_b6ft4")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fl4d4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pf72k"]
advance_mode = 2
advance_condition = &"is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x550c"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"
advance_expression = "check_hurt_state()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4pbo7"]
advance_mode = 2
advance_condition = &"is_move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tq3l8"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5k7cw"]
advance_mode = 2
advance_condition = &"is_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hoep7"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"
advance_expression = "check_attack_state()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r8nwp"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_move"
advance_expression = "check_attack_state()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gtg7s"]
advance_mode = 2
advance_condition = &"is_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_12go1"]
advance_mode = 2
advance_condition = &"is_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ggchv"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_move"
advance_expression = "check_hurt_state()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d8isj"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ceog0"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w2ynv"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p7mlb"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_66mhc"]
switch_mode = 2
advance_mode = 2
advance_expression = "check_death_state()"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_g7aw7"]
states/attack/node = SubResource("AnimationNodeBlendSpace1D_d44y6")
states/attack/position = Vector2(539, -25)
states/death/node = SubResource("AnimationNodeAnimation_as5o6")
states/death/position = Vector2(539, 152)
states/hurt/node = SubResource("AnimationNodeAnimation_vkbny")
states/hurt/position = Vector2(539, 266)
states/idle/node = SubResource("AnimationNodeAnimation_ygn52")
states/idle/position = Vector2(359, 100)
states/move/node = SubResource("AnimationNodeBlendSpace1D_v0b7u")
states/move/position = Vector2(737, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_fl4d4"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_pf72k"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_x550c"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_4pbo7"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_tq3l8"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_5k7cw"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_hoep7"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_r8nwp"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_gtg7s"), "move", "hurt", SubResource("AnimationNodeStateMachineTransition_12go1"), "hurt", "move", SubResource("AnimationNodeStateMachineTransition_ggchv"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_d8isj"), "hurt", "death", SubResource("AnimationNodeStateMachineTransition_ceog0"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_w2ynv"), "move", "death", SubResource("AnimationNodeStateMachineTransition_p7mlb"), "death", "End", SubResource("AnimationNodeStateMachineTransition_66mhc")]
graph_offset = Vector2(188, -70)

[sub_resource type="CircleShape2D" id="CircleShape2D_xxvn0"]

[sub_resource type="Resource" id="Resource_3mo3h"]
script = ExtResource("7_x8lll")
damage = 2.0
type = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_slc2l"]
radius = 100.0

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("velocity_component", "stats_component", "hitbox_component", "hurtbox_component", "tracker_component")]
collision_layer = 4
collision_mask = 5
platform_floor_layers = 4294901760
script = ExtResource("1_ofamj")
faction = 3
velocity_component = NodePath("VelocityComponent")
stats_component = NodePath("StatsComponent")
hitbox_component = NodePath("HitboxComponent")
hurtbox_component = NodePath("HurtboxComponent")
tracker_component = NodePath("TrackerComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = SubResource("AtlasTexture_u7fsj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_upk1g")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpsxg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_g7aw7")
anim_player = NodePath("../Animator")
advance_expression_base_node = NodePath("..")
parameters/conditions/is_attack = false
parameters/conditions/is_dead = false
parameters/conditions/is_hurt = false
parameters/conditions/is_idle = false
parameters/conditions/is_move = false
parameters/attack/blend_position = 0
parameters/move/blend_position = 0

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("1_s4nx0")]
stats = NodePath("../StatsComponent")
max_speed = 60.0
acceleration = 10.0

[node name="HealthComponent" parent="." instance=ExtResource("2_pclgn")]

[node name="StatsComponent" parent="." instance=ExtResource("3_tkd2y")]

[node name="EffectComponent" parent="." node_paths=PackedStringArray("stats_component", "health_component", "hitbox_component", "hurtbox_component") instance=ExtResource("4_n6hkv")]
stats_component = NodePath("../StatsComponent")
health_component = NodePath("../HealthComponent")
hitbox_component = NodePath("../HitboxComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "effect_component", "stats_component") instance=ExtResource("5_emebw")]
health_component = NodePath("../HealthComponent")
effect_component = NodePath("../EffectComponent")
stats_component = NodePath("../StatsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_xxvn0")

[node name="HurtboxComponent" parent="." instance=ExtResource("6_lxtfo")]
damage_datas = Array[ExtResource("7_x8lll")]([SubResource("Resource_3mo3h")])
damage_rate = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_xxvn0")

[node name="TrackerComponent" parent="." instance=ExtResource("9_bx22s")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackerComponent"]
visible = false
shape = SubResource("CircleShape2D_slc2l")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="LungeCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="hit_by_hurtbox" from="HitboxComponent" to="." method="_on_hitbox_component_hit_by_hurtbox"]
[connection signal="target_updated" from="TrackerComponent" to="." method="_on_tracker_component_target_updated"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
